[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
winit = "0.27.5"
env_logger = "0.10"
log = "0.4.17"
wgpu = "0.14.2"
pollster = "0.2.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18.0"
tobj = { version = "3.2.3", features = [
	"async",
]}
rand = "0.8.5"
noise = "0.8.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
